Spelling mistakes/minor bugs

--- a/templates/add_new_member.html
+++ b/templates/add_new_member.html
@@ -39,7 +39,7 @@
         </div>
 
         <!-- Arm selection buttons -->
-        <label for="arm" class="form-label mt-4">Chose arm for the calculation:</label>
+        <label for="arm" class="form-label mt-4">Choose arm for the calculation:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
             <label class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}">
                 <input type="radio" name="arm" id="armRight" value="right" autocomplete="off" {{ 'checked' if arm == 'right' else '' }} class="visually-hidden">Right arm
