--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -10,7 +10,7 @@
     </div>
     <form method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
         <!-- Arm selection buttons -->
-        <label for="arm" class="form-label">Chose arm for the prediction:</label>
+        <label for="arm" class="form-label">Choose arm for the prediction:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
             <label class="btn btn-primary w-50 {{ 'active' if arm == 'right' else '' }}">
                 <input type="radio" name="arm" id="armRight" value="right" autocomplete="off" {{ 'checked' if arm == 'right' else '' }} class="visually-hidden">Right arm
