--- a/templates/elo_from_match.html
+++ b/templates/elo_from_match.html
@@ -3,7 +3,7 @@
 {% block title %}ELO from match{% endblock %}
 
 {% block content %}
-<div class="mx-auto" style="max-width: 800px;">
+<div class="mx-auto col-sm-8">
     <h2 class="mb-4">ELO from match</h2>
     <div class="alert alert-secondary" role="alert">
         <strong>Ranked example:</strong> If there was a supermatch between two [Ranked] armwrestlers, the ELO points gained or lost are determined by the outcome of this match.<br>                           
@@ -33,8 +33,8 @@
         <div class="row">
             <div class="col">
                 <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
-                <select class="form-select" id="armwrestler1" name="armwrestler1" required>
-                    <option value="none">Choose...</option>
+                <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
+                    <option value="none">Choose</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
@@ -50,15 +50,15 @@
             <div class="col">
                 <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
                 {% if selected_armwrestler_1 != 'none' %}
-                    <select class="form-select" id="armwrestler2" name="armwrestler2" required>
-                        <option value="none">Choose...</option>
+                    <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required>
+                        <option value="none">Choose</option>
                         {% for armwrestler in armwrestlers_2 %}
                             <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_2 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                         {% endfor %}
                     </select>
                 {% else %}
-                    <select class="form-select" id="armwrestler2" name="armwrestler2" required disabled>
-                        <option value="none">Choose Armwrestler 1...</option>
+                    <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required disabled>
+                        <option value="none">Choose Armwrestler 1</option>
                     </select>
                 {% endif %}
             </div>
@@ -74,8 +74,8 @@
                 </div>
             </div>
             <div class="col">
-                <select class="form-select" id="armwrestler1" name="armwrestler1" required>
-                    <option value="none">Choose...</option>
+                <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
+                    <option value="none">Choose</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
