--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,7 +53,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="mb-2 mb-md-0">Armwrestling Zurich "Let's go again"</div>
                     <a href="https://www.instagram.com/armwrestlingzurich" target="_blank" class="mb-1 mb-md-0 text-decoration-none text-light">
-                        Follow us on Instagram <i class="bi bi-instagram"></i> 
+                        Instagram <i class="bi bi-instagram"></i> 
                     </a>
                 </div>
             </div>
