--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="mx-auto" style="max-width: 300px;">
+<div class="mx-auto col-sm-3">
     <h2 class="mb-4">Login</h2>
     <form method="POST">
         <div class="mb-2">
