--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -3,7 +3,7 @@
 {% block title %}Prediction{% endblock %}
 
 {% block content %}
-<div class="mx-auto" style="max-width: 800px;">
+<div class="mx-auto col-sm-8">
     <h2 class="mb-4">Prediction</h2>
     <div class="alert alert-secondary" role="alert">
         This gives the expected results from the system. Another way to interpret this is, for example: a 60% to 40% ratio predicts a supermatch result of 3 : 2.
@@ -24,8 +24,8 @@
         <div class="row">
             <div class="col">
                 <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
-                <select class="form-select" id="armwrestler1" name="armwrestler1" required>
-                    <option value="none">Choose...</option>
+                <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
+                    <option value="none">Choose</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
@@ -40,8 +40,8 @@
 
             <div class="col">
                 <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
-                <select class="form-select" id="armwrestler2" name="armwrestler2" required disabled>
-                    <option value="none">Choose Armwrestler 1...</option>
+                <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required disabled>
+                    <option value="none">Choose Armwrestler 1</option>
                 </select>
             </div>
         </div>
