--- a/templates/supermatch.html
+++ b/templates/supermatch.html
@@ -3,7 +3,7 @@
 {% block title %}Supermatch{% endblock %}
 
 {% block content %}
-<div class="mx-auto" style="max-width: 800px;">
+<div class="mx-auto col-sm-8">
     <h2 class="mb-4">Supermatch</h2>
     <form method="POST" action="{{ url_for('supermatch') }}" hx-post="{{ url_for('supermatch') }}" hx-trigger="change" hx-swap="outerHTML">
         <!-- Arm selection buttons -->
@@ -21,8 +21,8 @@
         <div class="row">
             <div class="col">
                 <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
-                <select class="form-select" id="armwrestler1" name="armwrestler1" required>
-                    <option value="none">Choose...</option>
+                <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
+                    <option value="none">Choose</option>
                     {% for armwrestler in armwrestlers %}
                         <option value="{{ armwrestler[0] }}" {% if selected_armwrestler_1 == armwrestler[0] %}selected{% endif %}>{{ armwrestler[0] }}</option>
                     {% endfor %}
@@ -37,8 +37,8 @@
 
             <div class="col">
                 <label for="armwrestler2" class="form-label">Armwrestler 2:</label>
-                <select class="form-select" id="armwrestler2" name="armwrestler2" required disabled>
-                    <option value="none">Choose Armwrestler 1...</option>
+                <select class="form-select text-truncate" id="armwrestler2" name="armwrestler2" required disabled>
+                    <option value="none">Choose Armwrestler 1</option>
                 </select>
             </div>
         </div>
