go back to max-width 800

--- a/templates/elo_from_match.html
+++ b/templates/elo_from_match.html
@@ -3,7 +3,7 @@
 {% block title %}ELO from match{% endblock %}
 
 {% block content %}
-<div class="mx-auto col-sm-8">
+<div class="mx-auto" style="max-width: 800px;">
     <h2 class="mb-4">ELO from match</h2>
     <div class="alert alert-secondary" role="alert">
         <strong>Ranked example:</strong> If there was a supermatch between two [Ranked] armwrestlers, the ELO points gained or lost are determined by the outcome of this match.<br>                           
