--- a/templates/history.html
+++ b/templates/history.html
@@ -23,19 +23,19 @@
         <tbody>
             {% for record in history %}
             <tr>
-                <td style="width: 20%;">
-                    <strong>#{{ record[4] }}</strong> {{ record[1] }}(<strong>{{ record[6] }}</strong>)
+                <td class="align-middle" style="width: 20%;">
+                    <strong>#{{ record[4] }}</strong> {{ record[1] }}<strong>({{ record[6] }})</strong>
                 </td>
-                <td style="width: 2%;"> vs </td>
-                <td style="width: 20%;">
-                    <strong>#{{ record[5] }}</strong> {{ record[2] }}(<strong>{{ record[7] }}</strong>)
+                <td class="align-middle" style="width: 2%;"> vs </td>
+                <td class="align-middle" style="width: 20%;">
+                    <strong>#{{ record[5] }}</strong> {{ record[2] }}<strong>({{ record[7] }})</strong>
                 </td>
-                <td class='text-center' style="width: 10%;">{{ record[3] }}</td>
-                <td class='text-nowrap text-center' style="width: 10%;">
+                <td class="text-center align-middle" style="width: 10%;"><strong>{{ record[3] }}</strong></td>
+                <td class="text-nowrap text-center align-middle" style="width: 10%;">
                     <span class="fs-6 badge {{ colors[loop.index - 1][0] }}">{{ record[8] }}</span> : 
                     <span class="fs-6 badge {{ colors[loop.index - 1][1] }}">{{ record[9] }}</span>
                 </td>
-                <td class='text-nowrap text-center' style="width: 10%;">
+                <td class="text-nowrap text-center align-middle" style="width: 10%;">
                     <span class="fs-6 badge {{ colors[loop.index - 1][2] }}">{{ colors[loop.index - 1][4] }}</span>|<span class="fs-6 badge {{ colors[loop.index - 1][3] }}">{{ colors[loop.index - 1][5] }}</span>
                 </td>
             </tr>
