--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -3,7 +3,7 @@
 {% block title %}Prediction{% endblock %}
 
 {% block content %}
-<div class="mx-auto" style="max-width: 800px;">
+<div class="mx-auto max-width-800">
     <h2 class="mb-4">Prediction</h2>
     <div class="alert alert-secondary" role="alert">
         This gives the expected results from the system. Another way to interpret this is, for example: a 60% to 40% ratio predicts a supermatch result of 3 : 2.
