--- a/templates/add_new_member_partial.html
+++ b/templates/add_new_member_partial.html
@@ -1,5 +1,5 @@
 <form method="POST" action="{{ url_for('add_new_member') }}" hx-post="{{ url_for('add_new_member') }}" hx-trigger="change" hx-swap="outerHTML">
-    <div class="mx-auto" style="max-width: 400px;">
+    <div class="mx-auto max-width-800">
         <div class="mb-2">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" name="name" value="{{ name }}" hx-post="{{ url_for('update_name') }}" hx-trigger="keyup changed delay:100ms" hx-target="#new_member" hx-swap="outerHTML">
