--- a/templates/add_new_member.html
+++ b/templates/add_new_member.html
@@ -50,7 +50,7 @@
         <div class="row flex-nowrap">
             <div class="col" style="width: 30%;">
                 <label for="new_member" class="form-label">New member:</label>
-                <div class="form-control text-secondary text-nowrap overflow-hidden" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name...' }}</div>
+                <div class="form-control text-secondary text-nowrap overflow-hidden" id="new_member" name="new_member" disabled aria-disabled="true">{{ name or 'Enter a name' }}</div>
             </div>
 
             <div class="col-1 d-flex justify-content-center align-items-center pt-4">
