--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="mx-auto" style="max-width: 300px;">
     <h2 class="mb-4">Login</h2>
-    <form method="POST">
+    <form class="mb-4" method="POST">
         <div class="mb-2">
             <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" id="username" name="username" required>
