--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -8,7 +8,7 @@
     <div class="alert alert-secondary" role="alert">
         This gives the expected results from the system. Another way to interpret this is, for example: a 60% to 40% ratio predicts a supermatch result of 3 : 2.
     </div>
-    <form method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
+    <form class="mb-4" method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
         <!-- Arm selection buttons -->
         <label for="arm" class="form-label">Choose arm for the prediction:</label>
         <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
