--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -1,4 +1,4 @@
-<form method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
+<form class="mb-4" method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
     <!-- Arm selection buttons -->
     <label for="arm" class="form-label">Choose arm for the prediction:</label>
     <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Armwrestler selection dropdowns -->
-    <div class="row">
+    <div class="row mb-2">
         <div class="col">
             <label for="armwrestler1" class="form-label">Armwrestler 1:</label>
             <select class="form-select text-truncate" id="armwrestler1" name="armwrestler1" required>
@@ -49,12 +49,32 @@
     </div>
 
     {% if prediction_ready %}
-    <label for="arm" class="form-label my-3">Prediction:</label>
+    <label for="current_elo" class="form-label mb-2">Current ELO:</label>
+    <div class="row mb-2">
+        <div class="col"></div>
+
+        <div class="col d-flex justify-content-center align-items-center">
+            <div class="text-center fs-5">
+                <span class="text-{{ armwrestler_color[0] }}">{{armwrestler_1_elo}}</span>
+            </div>
+        </div>
+        
+        <div class="col-1 d-flex justify-content-center align-items-center text-center fs-2">:</div>
+
+        <div class="col d-flex justify-content-center align-items-center">
+            <div class="text-center fs-5">
+                <span class="text-{{ armwrestler_color[1] }}">{{armwrestler_2_elo}}</span>
+            </div>
+        </div>
+
+        <div class="col"></div>
+    </div>
+    <label for="prediction" class="form-label mb-2">Prediction:</label>
     <div class="row">
         <div class="col">
             <div class="progress" style="height: 2.5rem;" >
-                <div class="progress-bar {{ armwrestler_color[0] }}" role="progressbar" style="width: {{ predicted_1 }}%" aria-valuenow="{{ predicted_1 }}" aria-valuemin="0" aria-valuemax="100">{{ predicted_1 }}%</div>
-                <div class="progress-bar {{ armwrestler_color[1] }}" role="progressbar" style="width: {{ predicted_2 }}%" aria-valuenow="{{ predicted_2 }}" aria-valuemin="0" aria-valuemax="100">{{ predicted_2 }}%</div>
+                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ predicted_1 }}%" aria-valuenow="{{ predicted_1 }}" aria-valuemin="0" aria-valuemax="100">{{ predicted_1 }}%</div>
+                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ predicted_2 }}%" aria-valuenow="{{ predicted_2 }}" aria-valuemin="0" aria-valuemax="100">{{ predicted_2 }}%</div>
             </div>
         </div>
     </div>
