--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -4,8 +4,12 @@
 
 {% block content %}
 
+<h2 class="mb-4">Rankings</h2>
+
+<p>Official rankings for armwrestlers at the <strong>Armwrestling Zurich</strong> club. Scores are based on the ELO rating system.</p>
+
 <div class="alert alert-danger" role="alert">
-    Only right arm ranking is available for now. We have to collect data for the left arm.
+    Left arm ranking are still provisional.
 </div>
 
 <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
