--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
         <title>{% block title %}{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Armwrestling Zurich Ranking">
+        <meta name="description" content="Armwrestling Zurich Ranking. Official armwrestling rankings for the Armwrestling Zurich club. The scores are based on the ELO rating system.">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
         <link href="/static/styles.css" rel="stylesheet">
@@ -15,7 +15,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
     <body class="bg-light">
-        <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-xxl navbar-dark bg-dark">
             <div class="container-md">
                 <a class="navbar-brand fs-6" href="{{ url_for('ranking') }}">Armwrestling Zurich Ranking</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,6 +28,7 @@
                             <a class="nav-link text-nowrap" href="{{ url_for('supermatch') }}">Supermatch</a>
                         {% endif %}
                             <a class="nav-link text-nowrap" href="{{ url_for('history') }}">History</a>
+                            <a class="nav-link text-nowrap" href="{{ url_for('closest_matches') }}">Closest matches</a>
                             <a class="nav-link text-nowrap" href="{{ url_for('prediction') }}">Prediction</a>
                             <a class="nav-link text-nowrap" href="{{ url_for('elo_from_match') }}">ELO from match</a>
                     </div>
