--- a/templates/history.html
+++ b/templates/history.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}History{% endblock %}
+{% block title %}Match History{% endblock %}
 
 {% block content %}
 
