--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Ranking{% endblock %}
+{% block title %}Rankings{% endblock %}
 
 {% block content %}
 
