--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>{% block title %}{% endblock %}</title>
+        <title>{% block title %}{% endblock %} | Armwrestling Zurich</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Armwrestling Zurich Ranking. Official armwrestling rankings for the Armwrestling Zurich club. The scores are based on the ELO rating system.">
+        <meta name="description" content="Armwrestling Zurich Ranking. Official armwrestling rankings for the Armwrestling Zurich club in Zurich, Switzerland. The scores are based on the ELO rating system. Explore the latest official armwrestling rankings for the Armwrestling Zurich club. Our rankings are calculated using the ELO rating system.">
+        <meta name="keywords" content="armwrestling, zurich, ELO rating, armwrestling club, rankings, armwrestling matches, armwrestling switzerland">
+        <meta property="og:title" content="Armwrestling Zurich Ranking">
+        <meta property="og:description" content="Armwrestling rankings for the Armwrestling Zurich club in Zurich, Switzerland.">
+        <meta property="og:image" content="/static/thumbnail.jpg">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
         <link href="/static/styles.css" rel="stylesheet">
@@ -15,7 +19,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </head>
     <body class="bg-light">
+        {% if username %}
         <nav class="navbar navbar-expand-xxl navbar-dark bg-dark">
+        {% else %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        {% endif %}
             <div class="container-md">
                 <a class="navbar-brand fs-6" href="{{ url_for('ranking') }}">Armwrestling Zurich Ranking</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
