--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Prediction{% endblock %}
+{% block title %}Match Prediction{% endblock %}
 
 {% block content %}
 <div class="mx-auto" style="max-width: 800px;">
