Elo change + tables

--- a/templates/elo_from_match.html
+++ b/templates/elo_from_match.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}ELO from match{% endblock %}
+{% block title %}ELO From Match{% endblock %}
 
 {% block content %}
 <div class="mx-auto" style="max-width: 800px;">
