--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,7 +59,7 @@
         <footer class="footer mt-auto py-3 bg-dark">
             <div class="container-md text-light">
                 <div class="d-flex flex-column flex-md-row justify-content-between">
-                    <div class="mb-2 mb-md-0">Armwrestling Zurich "Let's go again"</div>
+                    <div class="mb-2 mb-md-0">Armwrestling Zurich Club "Let's go again"</div>
                     <a href="https://www.instagram.com/armwrestlingzurich" target="_blank" class="mb-1 mb-md-0 text-decoration-none text-light">
                         Instagram <i class="bi bi-instagram"></i> 
                     </a>
