--- a/templates/closest_matches.html
+++ b/templates/closest_matches.html
@@ -6,7 +6,7 @@
 
 <h2 class="mb-4">Closest matches</h2>
 
-<p>The top 10 closest matches between ranked armwrestlers based on the ELO scores.</p>
+<p>The top 15 closest matches between ranked armwrestlers based on the ELO scores.</p>
 
 <div class="btn-group btn-group-toggle mb-2 w-100" data-toggle="buttons">
     <a href="{{ url_for('closest_matches', arm='right') }}" 
@@ -19,28 +19,28 @@
     <table class="table">
         <thead class="table-dark">
             <tr>
-                <th style="width: 20%;">Armwrestlers</th>
+                <th style="width: 40%;">Armwrestlers</th>
                 <th style="width: 2%;"></th>
-                <th style="width: 20%;"></th>
-                <th class='text-center' style="width: 20%;">Prediction</th>
-                <th class='text-center text-nowrap' style="width: 10%;">ELO diff</th>
+                <th style="width: 40%;"></th>
+                <th class='text-center' style="width: 10%;">Prediction</th>
+                <th class='text-center text-nowrap' style="width: 8%;">ELO diff</th>
             </tr>
         </thead>
         <tbody>
             {% for match in closest_matches_with_predictions %}
             <tr>
-                <td class="align-middle" style="width: 20%;">
+                <td class="align-middle" style="width: 40%;">
                     <strong>#{{ match[0] }}</strong> {{ match[1] }}<strong>({{ match[2] }})</strong>
                 </td>
-                <td class="align-middle" style="width: 2%;"> vs </td>
-                <td class="align-middle" style="width: 20%;">
+                <td class="align-middle" style="width: 2%;">vs</td>
+                <td class="align-middle" style="width: 40%;">
                     <strong>#{{ match[3] }}</strong> {{ match[4] }}<strong>({{ match[5] }})</strong>
                 </td>
-                <td class="text-nowrap text-center align-middle" style="width: 20%;">
+                <td class="text-nowrap text-center align-middle" style="width: 10%;">
                     <span class="fs-6 badge text-{{ match[9] }}">{{ match[7] }}</span>:<span class="fs-6 badge text-{{ match[10] }}">{{ match[8] }}</span>
                 </td>
-                <td class="text-nowrap text-center align-middle" style="width: 10%;">
-                    {{ match[6] }}
+                <td class="text-nowrap text-center align-middle" style="width: 8%;">
+                    <strong>{{ match[6] }}</strong>
                 </td>
             </tr>
             {% endfor %}
