--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -23,9 +23,9 @@
     <table class="table">
         <thead class="table-dark">
             <tr>
-                <th style="width: 15%;">Rank</th>
-                <th style="width: 30%;">Name</th>
-                <th class="text-end text-nowrap">{{ "Right ELO" if arm == 'right' else "Left ELO" }}</th>
+                <th style="width: 5%;">Rank</th>
+                <th style="width: 70%;">Name</th>
+                <th class="text-end text-nowrap" style="width: 10%;">{{ "Right ELO" if arm == 'right' else "Left ELO" }}</th>
                 {% if username %}
                 <th class="text-center" style="width: 15%;">Action</th>
                 {% endif %}
@@ -34,11 +34,11 @@
         <tbody>
             {% for armwrestler in armwrestlers %}
             <tr>
-                <td><strong>#{{ armwrestler[0] }}</strong></td>
-                <td>{{ armwrestler[1] }}</td>
-                <td class="text-end"><strong>{{ armwrestler[2] }}</strong></td>
+                <td style="width: 5%;"><strong>#{{ armwrestler[0] }}</strong></td>
+                <td style="width: 70%;">{{ armwrestler[1] }}</td>
+                <td style="width: 10%;" class="text-end"><strong>{{ armwrestler[2] }}</strong></td>
                 {% if username %}
-                <td>
+                <td style="width: 15%;">
                     <form class="text-center" action="{{ url_for('remove_member') }}" method="POST">
                         <input type="hidden" name="name" value="{{ armwrestler[1] }}">
                         <button type="submit" class="btn btn-danger btn-sm">Remove</button>
