--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -69,14 +69,46 @@
 
         <div class="col"></div>
     </div>
-    <label for="prediction" class="form-label mb-2">Prediction:</label>
-    <div class="row">
-        <div class="col">
-            <div class="progress" style="height: 2.5rem;" >
-                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ predicted_1 }}%" aria-valuenow="{{ predicted_1 }}" aria-valuemin="0" aria-valuemax="100">{{ predicted_1 }}%</div>
-                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ predicted_2 }}%" aria-valuenow="{{ predicted_2 }}" aria-valuemin="0" aria-valuemax="100">{{ predicted_2 }}%</div>
+    <label for="exprected_score" class="form-label mb-2">Expected score:</label>
+    <div class="row mb-4">
+        <div class="col d-flex justify-content-center align-items-center"></div>
+
+        <div class="col d-flex justify-content-center align-items-center">
+            <div class="text-center fs-3">
+                <span class="badge bg-{{ armwrestler_color[0] }}">{{ expected_five_score1 }}</span>
             </div>
         </div>
+        
+        <div class="col-1 d-flex justify-content-center align-items-center text-center fs-2">:</div>
+
+        <div class="col d-flex justify-content-center align-items-center">
+            <div class="text-center fs-3">
+                <span class="badge bg-{{ armwrestler_color[1] }}">{{ expected_five_score2 }}</span>
+            </div>
+        </div>
+
+        <div class="col d-flex justify-content-center align-items-center"></div>
+    </div> 
+    <div class="row mb-4">
+        <div class="col">
+            <div class="progress" style="height: 2.5rem;" >
+                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ expected_1 }}%" aria-valuenow="{{ expected_1 }}" aria-valuemin="0" aria-valuemax="100">{{ expected_1 }}</div>
+                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ expected_2 }}%" aria-valuenow="{{ expected_2 }}" aria-valuemin="0" aria-valuemax="100">{{ expected_2 }}</div>
+            </div>
+        </div>
+    </div>
+
+    <label for="win_chance" class="form-label mb-2">Win chance (expected score confidence - 5):</label>
+    <div class="row mb-4">
+        <div class="col">
+            <div class="progress" style="height: 2.5rem;" >
+                <div class="progress-bar bg-{{ armwrestler_color[0] }}" role="progressbar" style="width: {{ beta_predicted_1 }}%" aria-valuenow="{{ beta_predicted_1 }}" aria-valuemin="0" aria-valuemax="100">{{ beta_predicted_1 }}%</div>
+                <div class="progress-bar bg-{{ armwrestler_color[1] }}" role="progressbar" style="width: {{ beta_predicted_2 }}%" aria-valuenow="{{ beta_predicted_2 }}" aria-valuemin="0" aria-valuemax="100">{{ beta_predicted_2 }}%</div>
+            </div>
+        </div>
+    </div>
+    <div class="alert alert-secondary mb-2" role="alert">
+        The win chance uses the beta distribution to determine the likelihood of an armwrestler winning/losing the match in percent. The parameters of the distribution are set such that the expected score is the mean, and the expected score confidence is the value to control the distribution's spread. The probability of an armwrestler winning is then the integral of the part of the distribution where the armwrestler wins.
     </div>
     {% endif %}
 </form>
