--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -6,7 +6,8 @@
 <div class="mx-auto" style="max-width: 800px;">
     <h2 class="mb-4">Prediction</h2>
     <div class="alert alert-secondary" role="alert">
-        This gives the expected results from the system. Another way to interpret this is, for example: a 60% to 40% ratio predicts a supermatch result of 3 : 2.
+        <strong>Expected score: </strong>This gives the expected results from the system. Another way to interpret this is, for example: a 60 to 40 ratio expects a supermatch result of 3 : 2.<br>
+        <strong>Win chance: </strong>This gives the overall chance of winning the match for each armwrestler in percentage, no matter the score.
     </div>
     <form class="mb-4" method="POST" action="{{ url_for('prediction') }}" hx-post="{{ url_for('prediction') }}" hx-trigger="change" hx-swap="outerHTML">
         <!-- Arm selection buttons -->
