--- a/templates/prediction_partial.html
+++ b/templates/prediction_partial.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-    <label for="win_chance" class="form-label mb-2">Win chance (expected score confidence - 5):</label>
+    <label for="win_chance" class="form-label mb-2">Win chance (confidence - 5):</label>
     <div class="row mb-4">
         <div class="col">
             <div class="progress" style="height: 2.5rem;" >
